--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "node ./bin/www"
+    
   },
   "eslintConfig": {
     "extends": [
