--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "node ./bin/www"
+    "predeploy": "npm run build"
     
   },
   "eslintConfig": {
