--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "framer-motion": "^10.12.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +26,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build"
-    
   },
   "eslintConfig": {
     "extends": [
